deploy/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flink-kubernetes-dashboard
  namespace: flink-operator
  labels:
    app: flink-kubernetes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flink-kubernetes
  template:
    metadata:
      labels:
        app: flink-kubernetes
    spec:
      serviceAccount: flink-kubernetes-api
      containers:
        - name: flink-kubernetes-api
          image: harbor.knada.rancher.kosmos.fr/public/flink-kubernetes-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
        - name: flink-kubernetes-dashboard
          image: harbor.knada.rancher.kosmos.fr/public/flink-kubernetes-dashboard:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
