deploy/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flink-kubernetes-dashboard
  namespace: flink-operator
spec:
  ingressClassName: nginx
  rules:
    - host: flink-kubernetes-dashboard.knada.rancher.kosmos.fr
      http:
        paths:
          - backend:
              service:
                port:
                  number: 3000
                name: flink-kubernetes-dashboard
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - flink-kubernetes-dashboard.knada.rancher.kosmos.fr
      secretName: wildcard-knada-rancher-kosmos-fr-tls
